# laf

backend/: .env  =3.10.1  CLAUDE.md  README.md  alembic.ini  pyproject.toml
backend/.cursor/rules/: fastapi.mdc  uv.mdc
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250113_000001_initial_schema.py  20250113_000002_add_has_match_found.py  20250113_000003_update_clip_vector_dimensions.py  3713cb3a645a_initial.py  44b3e6b8710d_initial.py  53d5cc029f54_initial.py
backend/app/: __init__.py  main.py
backend/app/config/: logging.py  settings.py
backend/app/db/: session.py
backend/app/models/: __init__.py  item.py  match.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  items.py  matches.py  users.py
backend/app/schemas/: auth.py  item.py  match.py  user.py
backend/app/services/: embeddings.py  items.py  matching.py  notifications.py  search.py  users.py
backend/app/tasks/: matching.py
backend/app/utils/: dependencies.py  files.py  location_proximity.py  security.py
frontend/: README.md  guide.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/.cursor/rules/: svelte.mdc
frontend/src/: app.css  app.html
frontend/src/lib/api/: admin.ts  auth.ts  client.ts  config.ts  items.ts  matches.ts
frontend/src/lib/contexts/: user.svelte.ts
frontend/src/lib/stores/: auth.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/dashboard/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
(+18 files in other folders)
